<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/jetbrains_mono_bold"
        android:text="@string/game_options_label"
        android:textColor="@color/absoluteDarkness"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/game_options_label" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="closeSetup"
        app:layout_constraintBottom_toBottomOf="@+id/titleText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_clear_24px" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jetbrains_mono_regular"
        android:text="@string/select_player_1_label"
        app:layout_constraintStart_toStartOf="@+id/playerOneSpinner"
        app:layout_constraintTop_toBottomOf="@+id/titleText3"
        tools:text="@string/select_player_1_label" />

    <Spinner
        android:id="@+id/playerOneSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnIniciarJogoDupla"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="startGame"
        android:text="@string/start_game_btn_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/start_game_btn_label" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/jetbrains_mono_regular"
        android:text="@string/select_player_2_label"
        app:layout_constraintStart_toStartOf="@+id/playerOneSpinner"
        app:layout_constraintTop_toBottomOf="@+id/playerOneSpinner"
        tools:text="@string/select_player_2_label" />

    <Spinner
        android:id="@+id/playerTwoSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jetbrains_mono_bold"
        android:text="Regras do Jogo"
        app:layout_constraintStart_toStartOf="@+id/playerTwoSpinner"
        app:layout_constraintTop_toBottomOf="@+id/playerTwoSpinner" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/jetbrains_mono_regular"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:text="Vocês jogarão uma partida em cada dificuldade, alternando a vez por cada tentativa errada. Cada acerto vale 10 pontos. Se conseguirem terminar as três partidas, o jogador com mais acertos será o vencedor e ganhará a pontuação acumulada."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>